--- a/app/src/main/res/layout/new_header_main.xml
+++ b/app/src/main/res/layout/new_header_main.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:text="@string/sign_in_or_sign_up"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
