--- a/app/src/main/res/layout/item_ads.xml
+++ b/app/src/main/res/layout/item_ads.xml
@@ -34,8 +34,8 @@
 
     <ImageView
         android:id="@+id/imAbs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
